Blender able to create folders with invalid characters at the end of the name. #45424

Closed
opened 2015-07-14 12:32:41 +02:00 by mik arieta · 7 comments

System Information
Windows 7 64 bit

Blender Version
Broken: 2.75a

Short description of error
When trying to save a blend file in a new folder containing invalid characters at end of the name (i tryed ".." , "..." , " " ) while it's giving the error "could not create new folder" it's the same creating the folder. That folder is then undeletable.
Tried also ? < > , with those characters seems like working well.

Exact steps for others to reproduce the error

  • Open Blender
  • Save the default file in a new folder, created by writing in the file path as image:
    folder new.jpg
    in image case the new folder will be called asdfg...
  • while it gives an error the folder will be created the same.
  • how to delete the folder? I tried with some cmd commands, tools but they didn't work, my knowledge is limited :(
**System Information** Windows 7 64 bit **Blender Version** Broken: 2.75a **Short description of error** When trying to save a blend file in a new folder containing invalid characters at end of the name (i tryed ".." , "..." , " " ) while it's giving the error "could not create new folder" it's the same creating the folder. That folder is then undeletable. Tried also ? < > , with those characters seems like working well. **Exact steps for others to reproduce the error** - Open Blender - Save the default file in a new folder, created by writing in the file path as image: ![folder new.jpg](https://archive.blender.org/developer/F206865/folder_new.jpg) in image case the new folder will be called asdfg... - while it gives an error the folder will be created the same. - how to delete the folder? I tried with some cmd commands, tools but they didn't work, my knowledge is limited :(
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @mikarieta

Added subscriber: @mikarieta

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2015-07-14 14:03:50 +02:00

Tssst… Windows… Those links may interest you:
http://superuser.com/questions/510529/how-can-i-delete-a-folder-with-illegal-characters
http://serverfault.com/questions/95581/delete-file-containing-invalid-characters-in-windows

But we should avoid allowing such chars, we have a function in Blender that makes paths 'safe' regarding forbidden chars, will add it here too.

Tssst… Windows… Those links may interest you: http://superuser.com/questions/510529/how-can-i-delete-a-folder-with-illegal-characters http://serverfault.com/questions/95581/delete-file-containing-invalid-characters-in-windows But we should avoid allowing such chars, we have a function in Blender that makes paths 'safe' regarding forbidden chars, will add it here too.
Author

Thank you, i was able to delete those folders using a Linux live usb drive.

Thank you, i was able to delete those folders using a Linux live usb drive.

This issue was referenced by 8a17918555

This issue was referenced by 8a17918555d9ba8c7f420deda35b77ffa8d3850e

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45424
No description provided.